// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic commit with a small diff 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m 26ca49fb83758bace20a473e231d576aa1bbe115                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <shrey@quip.com>                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Tue May 23 16:47:17 2017 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176msonos[39m[49m[48;2;43;43;43m[38;2;204;204;204m to brew                                                                                                                           [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m Brewfile                                                                                                                            [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -19,2 +19,3 @@ brew 'python3'                                                                                                        [39m[49m[22m
[48;2;43;43;43m[38;2;102;102;102m   19 [39m[49m[48;2;43;43;43m[38;2;255;255;255m b rew 'socat'                                                                                                                    [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   20 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + brew 'sonos'                                                                                                                   [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   20 [39m[49m[48;2;43;43;43m[38;2;255;255;255m b rew 'terminal-notifier'                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -42,3 +43,2 @@ cask 'rescuetime'                                                                                                     [39m[49m[22m
[48;2;43;43;43m[38;2;102;102;102m   42 [39m[49m[48;2;43;43;43m[38;2;255;255;255m c ask 'slate'                                                                                                                    [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   43 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - cask 'sonos'                                                                                                                   [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   44 [39m[49m[48;2;43;43;43m[38;2;255;255;255m c ask 'spotify'                                                                                                                  [39m[49m
"
`;

exports[`basic commit with addition 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m f735de7025c6d626c5ae1a291fe24f143dea0313                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 15:25:34 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mAdd[39m[49m[48;2;43;43;43m[38;2;204;204;204m theme support                                                                                                                       [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m todo.md                                                                                                                             [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -9,2 +9,3 @@                                                                                                                         [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    9 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [39m[49m[48;2;58;48;48m[38;2;212;212;212m[[39m[49m[48;2;58;48;48m[38;2;206;145;120mx[39m[49m[48;2;58;48;48m[38;2;212;212;212m][39m[49m[48;2;58;48;48m[38;2;212;212;212m Organize code[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                           [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   10 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [ ] Handle empty diffs[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                      [39m[49m
[48;2;41;50;41m[38;2;88;176;88m    9 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;103;150;230m-[39m[49m[48;2;48;58;48m[38;2;212;212;212m   [39m[49m[48;2;48;58;48m[38;2;212;212;212m[[39m[49m[48;2;48;58;48m[38;2;206;145;120mx[39m[49m[48;2;48;58;48m[38;2;212;212;212m][39m[49m[48;2;48;58;48m[38;2;212;212;212m Move visual config to theme[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                            [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   11 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
"
`;

exports[`basic commit with binary file addition 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m c0ca4394fd55f1709430414f03db3d04cb9cc72c (HEAD -> main)                                                                   [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Wed Apr 14 18:24:29 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mtest[39m[49m[48;2;43;43;43m[38;2;204;204;204m binary file addition                                                                                                               [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;41;50;41m[38;2;88;176;88m■■[39m[49m[48;2;43;43;43m[38;2;255;221;153m screenshots/default.png                                                                                                             [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m test dir a/default.png                                                                                                              [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
"
`;

exports[`basic commit with deletion 1`] = `
"commit eccfb5a2b3d76ba53df315f977da74b18d50113e
Author: Shrey Banga <shrey@quip.com>
Date:   Thu Aug 22 10:07:25 2019 -0700

Remove deprecated option

diff --git a/Code/User/settings.json b/Code/User/settings.json
index a33d267..ae58a01 100644
--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -26,5 +26,4 @@
// search
\\"search.location\\": \\"panel\\",
-  \\"search.usePCRE2\\": true,

// telemetry
"
`;

exports[`basic commit with file addition 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m e4951eee3b9a8fa471d01dd64075c5fd44879a26                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sat Apr 10 14:35:42 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mwip[39m[49m[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                     [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;41;50;41m[38;2;88;176;88m■■[39m[49m[48;2;43;43;43m[38;2;255;221;153m .gitignore                                                                                                                          [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -0,0 +1,2 @@                                                                                                                         [39m[49m[22m
[48;2;41;50;41m[38;2;88;176;88m    1 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + node_modules/**                                                                                                                [39m[49m
[48;2;41;50;41m[38;2;88;176;88m    2 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + build/**                                                                                                                       [39m[49m
[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                        [39m[49m
"
`;

exports[`basic commit with file deletion 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m 1e6ebaccc6fadf3390a749e7aa2cc6372b24325e                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 18 03:17:05 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mUpdate[39m[49m[48;2;43;43;43m[38;2;204;204;204m main.yml                                                                                                                         [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;41;50;41m[38;2;88;176;88m■■[39m[49m[48;2;43;43;43m[38;2;255;221;153m                                                                                                                                     [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■■[39m[49m[48;2;43;43;43m[38;2;255;221;153m scripts/screenshotTheme                                                                                                             [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -1,7 +0,0 @@                                                                                                                         [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    1 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - on run argv                                                                                                                    [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    2 [39m[49m[48;2;58;48;48m[38;2;204;102;102m -     with timeout of 5 seconds                                                                                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    3 [39m[49m[48;2;58;48;48m[38;2;204;102;102m -         tell app \\"Terminal\\"                                                                                                    [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    4 [39m[49m[48;2;58;48;48m[38;2;204;102;102m -             open \\"screenshots.sh\\"                                                                                              [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    5 [39m[49m[48;2;58;48;48m[38;2;204;102;102m -         end tell                                                                                                               [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    6 [39m[49m[48;2;58;48;48m[38;2;204;102;102m -     end timeout                                                                                                                [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    7 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - end run                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;102;102;102m    8 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   No newline at end of file                                                                                                      [39m[49m
"
`;

exports[`basic commit with file move 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m 1c76ed4bb05429741fd4a48896bb84b11bc661f5                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sat Apr 10 22:26:15 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mMove[39m[49m[48;2;43;43;43m[38;2;204;204;204m sample diff files                                                                                                                  [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m colors.diff -> test-data/colors.diff                                                                                                [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
"
`;

exports[`basic commit with inline line changes 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m 9e424d329800e945e3003c9e275f80bdef69e591                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 4 19:04:26 2021 -0700                                                                                             [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mupdate[39m[49m[48;2;43;43;43m[38;2;204;204;204m lockfile                                                                                                                         [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m Brewfile.lock.json                                                                                                                  [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -5 +5 @@                                                                                                                             [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    5 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"revision\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;97;38;38m[38;2;255;204;204mnull[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                       [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -8 +8 @@                                                                                                                             [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    8 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"revision\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;97;38;38m[38;2;255;204;204mnull[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                       [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -11 +11 @@                                                                                                                           [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m   11 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"revision\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;97;38;38m[38;2;255;204;204mnull[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                       [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -16 +16 @@                                                                                                                           [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m   16 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"version\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"1.[39m[49m[48;2;97;38;38m[38;2;255;204;204m14[39m[49m[48;2;58;48;48m[38;2;206;145;120m.[39m[49m[48;2;97;38;38m[38;2;255;204;204m2_1[39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                 [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -17,0 +18 @@                                                                                                                         [39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -19,0 +21 @@                                                                                                                         [39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -20,0 +23,8 @@                                                                                                                       [39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -22,2 +32,2 @@                                                                                                                       [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m   22 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"url\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"https://homebrew.bintray.com/bottles/go-1.[39m[49m[48;2;97;38;38m[38;2;255;204;204m14[39m[49m[48;2;58;48;48m[38;2;206;145;120m.[39m[49m[48;2;97;38;38m[38;2;255;204;204m2_1[39m[49m[48;2;58;48;48m[38;2;206;145;120m.catalina.bottle.tar.gz\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   23 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"sha256\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"[39m[49m[48;2;97;38;38m[38;2;255;204;204m15b5623471330edcc681d7f9d57b449660e6d4b98c7f67af67f4991fc75d61fc[39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                     [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -26,6 +36,2 @@                                                                                                                       [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m   26 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"url\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"https://homebrew.bintray.com/bottles/go-1.[39m[49m[48;2;97;38;38m[38;2;255;204;204m14[39m[49m[48;2;58;48;48m[38;2;206;145;120m.[39m[49m[48;2;97;38;38m[38;2;255;204;204m2_1[39m[49m[48;2;58;48;48m[38;2;206;145;120m.mojave.bottle.tar.gz\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   27 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"sha256\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"[39m[49m[48;2;97;38;38m[38;2;255;204;204mfa65e7dabe514e65ae625ed3c84a6bf58df01aceffc6e9aa99752ca8c320ce69[39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                     [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   28 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m            },[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                                 [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   29 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m            [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"high_sierra\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: {[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                   [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   30 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"url\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"https://homebrew.bintray.com/bottles/go-1.14.2_1.high_sierra.bottle.tar.gz\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                             [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   31 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m              [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"sha256\\"[39m[49m[48;2;58;48;48m[38;2;212;212;212m: [39m[49m[48;2;58;48;48m[38;2;206;145;120m\\"0997f6f5cda0e3bdb7789a80b53621cb588202ab37fd89bcd269f8dfafd23351\\"[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                     [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   36 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m              [39m[49m[48;2;48;58;48m[38;2;206;145;120m\\"url\\"[39m[49m[48;2;48;58;48m[38;2;212;212;212m: [39m[49m[48;2;48;58;48m[38;2;206;145;120m\\"https://homebrew.bintray.com/bottles/go-1.16.3.mojave.bottle.tar.gz\\"[39m[49m[48;2;48;58;48m[38;2;212;212;212m,[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                    [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   37 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m              [39m[49m[48;2;48;58;48m[38;2;206;145;120m\\"sha256\\"[39m[49m[48;2;48;58;48m[38;2;212;212;212m: [39m[49m[48;2;48;58;48m[38;2;206;145;120m\\"bf1e90ed1680b8ee1acb49f2f99426c8a8ac3e49efd63c7f3b41e57e7214dd19\\"[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                     [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   32 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
"
`;

exports[`basic commit with tabs 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m f735de7025c6d626c5ae1a291fe24f143dea0313                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 15:25:34 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mAdd[39m[49m[48;2;43;43;43m[38;2;204;204;204m theme support                                                                                                                       [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m todo.md                                                                                                                             [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -9,2 +9,3 @@                                                                                                                         [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    9 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [x] Organize code[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                      [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   10 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [ ] Handle empty diffs[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                 [39m[49m
[48;2;41;50;41m[38;2;88;176;88m    9 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;103;150;230m-[39m[49m[48;2;48;58;48m[38;2;212;212;212m        [x] Move visual config to theme[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                       [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   11 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
"
`;

exports[`basic commits without diffs 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m e5f896655402f8cf2d947c528d45e1d56bbf5717 (HEAD -> main)                                                                   [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 16:23:54 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mSmall[39m[49m[48;2;43;43;43m[38;2;204;204;204m refactor to allow testing end-to-end                                                                                              [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m b637f38029f4a89c6a3b73b2b84a6a5b9e260730                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 11:53:02 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mOrganize[39m[49m[48;2;43;43;43m[38;2;204;204;204m code                                                                                                                           [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m f323143e03af95fee5d38c21238a92ffd4461847                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 10:39:17 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mmore[39m[49m[48;2;43;43;43m[38;2;204;204;204m todos                                                                                                                              [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
"
`;

exports[`basic empty 1`] = `
"
"
`;

exports[`basic multiple inserts and deletes in the same hunk 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m e5f896655402f8cf2d947c528d45e1d56bbf5717                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 16:23:54 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mSmall[39m[49m[48;2;43;43;43m[38;2;204;204;204m refactor to allow testing end-to-end                                                                                              [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m src/index.ts                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -1,5 +1,6 @@                                                                                                                         [39m[49m[22m
[48;2;43;43;43m[38;2;102;102;102m    1 [39m[49m[48;2;43;43;43m[38;2;255;255;255m i [39m[49m[48;2;43;43;43m[38;2;156;220;254mmport[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;156;220;254mchalk[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;156;220;254mfrom[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;206;145;120m'chalk'[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                      [39m[49m
[48;2;43;43;43m[38;2;102;102;102m    2 [39m[49m[48;2;43;43;43m[38;2;255;255;255m i [39m[49m[48;2;43;43;43m[38;2;156;220;254mmport[39m[49m[48;2;43;43;43m[38;2;212;212;212m * [39m[49m[48;2;43;43;43m[38;2;197;134;192mas[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;78;201;176mprocess[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;78;201;176mfrom[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;206;145;120m'process'[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                             [39m[49m
[48;2;41;50;41m[38;2;88;176;88m    3 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;197;134;192mimport[39m[49m[48;2;48;58;48m[38;2;212;212;212m [39m[49m[48;2;48;58;48m[38;2;156;220;254mstream[39m[49m[48;2;48;58;48m[38;2;212;212;212m [39m[49m[48;2;48;58;48m[38;2;197;134;192mfrom[39m[49m[48;2;48;58;48m[38;2;212;212;212m [39m[49m[48;2;48;58;48m[38;2;206;145;120m'stream'[39m[49m[48;2;48;58;48m[38;2;212;212;212m;[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                   [39m[49m
[48;2;43;43;43m[38;2;102;102;102m    3 [39m[49m[48;2;43;43;43m[38;2;255;255;255m i [39m[49m[48;2;43;43;43m[38;2;156;220;254mmport[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;156;220;254mterminalSize[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;156;220;254mfrom[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;206;145;120m'term-size'[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                           [39m[49m
[48;2;43;43;43m[38;2;102;102;102m    4 [39m[49m[48;2;43;43;43m[38;2;255;255;255m i [39m[49m[48;2;43;43;43m[38;2;156;220;254mmport[39m[49m[48;2;43;43;43m[38;2;212;212;212m { [39m[49m[48;2;43;43;43m[38;2;156;220;254miterlinesFromReadableAsync[39m[49m[48;2;43;43;43m[38;2;212;212;212m } [39m[49m[48;2;43;43;43m[38;2;156;220;254mfrom[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;206;145;120m'./iterLinesFromReadable'[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                           [39m[49m
[48;2;43;43;43m[38;2;102;102;102m    5 [39m[49m[48;2;43;43;43m[38;2;255;255;255m i [39m[49m[48;2;43;43;43m[38;2;156;220;254mmport[39m[49m[48;2;43;43;43m[38;2;212;212;212m { [39m[49m[48;2;43;43;43m[38;2;156;220;254miterLinesWithoutAnsiColors[39m[49m[48;2;43;43;43m[38;2;212;212;212m } [39m[49m[48;2;43;43;43m[38;2;156;220;254mfrom[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;206;145;120m'./iterLinesWithoutAnsiColors'[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                      [39m[49m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -12,15 +13,16 @@ function main() {                                                                                                   [39m[49m[22m
[48;2;43;43;43m[38;2;102;102;102m   12 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;86;156;214mconst[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;79;193;255mscreenWidth[39m[49m[48;2;43;43;43m[38;2;212;212;212m = [39m[49m[48;2;43;43;43m[38;2;220;220;170mterminalSize[39m[49m[48;2;43;43;43m[38;2;212;212;212m().[39m[49m[48;2;43;43;43m[38;2;156;220;254mcolumns[39m[49m[48;2;43;43;43m[38;2;212;212;212m;[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                    [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   13 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;86;156;214mconst[39m[49m[48;2;43;43;43m[38;2;212;212;212m [39m[49m[48;2;43;43;43m[38;2;79;193;255mtheme[39m[49m[48;2;43;43;43m[38;2;212;212;212m = [39m[49m[48;2;43;43;43m[38;2;220;220;170mdefaultTheme[39m[49m[48;2;43;43;43m[38;2;212;212;212m([39m[49m[48;2;43;43;43m[38;2;156;220;254mchalk[39m[49m[48;2;43;43;43m[38;2;212;212;212m, [39m[49m[48;2;43;43;43m[38;2;156;220;254mscreenWidth[39m[49m[48;2;43;43;43m[38;2;212;212;212m);[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   14 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   15 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m    [39m[49m[48;2;58;48;48m[38;2;220;220;170mtransformStreamWithIterables[39m[49m[48;2;58;48;48m[38;2;212;212;212m([39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                              [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   16 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;156;220;254mprocess[39m[49m[48;2;58;48;48m[38;2;212;212;212m.[39m[49m[48;2;58;48;48m[38;2;156;220;254mstdin[39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                         [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   17 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                                      [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   16 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m    [39m[49m[48;2;48;58;48m[38;2;156;220;254mstream[39m[49m[48;2;48;58;48m[38;2;212;212;212m.[39m[49m[48;2;48;58;48m[38;2;220;220;170mpipeline[39m[49m[48;2;48;58;48m[38;2;212;212;212m([39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                           [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   17 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m        [39m[49m[48;2;48;58;48m[38;2;220;220;170mtransformStreamWithIterables[39m[49m[48;2;48;58;48m[38;2;212;212;212m([39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                          [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   18 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m            [39m[49m[48;2;48;58;48m[38;2;156;220;254mprocess[39m[49m[48;2;48;58;48m[38;2;212;212;212m.[39m[49m[48;2;48;58;48m[38;2;156;220;254mstdin[39m[49m[48;2;48;58;48m[38;2;212;212;212m,[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                     [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   18 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;212;212;212m        [39m[49m[48;2;43;43;43m[38;2;156;220;254miterlinesFromReadableAsync[39m[49m[48;2;43;43;43m[38;2;212;212;212m,[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                            [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   19 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;212;212;212m        [39m[49m[48;2;43;43;43m[38;2;156;220;254miterLinesWithoutAnsiColors[39m[49m[48;2;43;43;43m[38;2;212;212;212m,[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                            [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   20 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;212;212;212m        [39m[49m[48;2;43;43;43m[38;2;220;220;170miterSideBySideDiff[39m[49m[48;2;43;43;43m[38;2;212;212;212m([39m[49m[48;2;43;43;43m[38;2;156;220;254mtheme[39m[49m[48;2;43;43;43m[38;2;212;212;212m),[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                             [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   21 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m            [39m[49m[48;2;58;48;48m[38;2;156;220;254miterWithNewlines[39m[49m[48;2;97;38;38m[38;2;255;204;204m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   22 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;97;38;38m[38;2;255;204;204m][39m[49m[48;2;58;48;48m[38;2;212;212;212m,[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                                     [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   23 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m        [39m[49m[48;2;58;48;48m[38;2;156;220;254mprocess[39m[49m[48;2;58;48;48m[38;2;212;212;212m.[39m[49m[48;2;58;48;48m[38;2;156;220;254mstdout[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                         [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   22 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m            [39m[49m[48;2;48;58;48m[38;2;156;220;254miterWithNewlines[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                   [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   23 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m        ),[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                                     [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   24 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m        [39m[49m[48;2;48;58;48m[38;2;156;220;254mprocess[39m[49m[48;2;48;58;48m[38;2;212;212;212m.[39m[49m[48;2;48;58;48m[38;2;156;220;254mstdout[39m[49m[48;2;48;58;48m[38;2;212;212;212m,[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                        [39m[49m
[48;2;41;50;41m[38;2;88;176;88m   25 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;212;212;212m        [39m[49m[48;2;48;58;48m[38;2;156;220;254mconsole[39m[49m[48;2;48;58;48m[38;2;212;212;212m.[39m[49m[48;2;48;58;48m[38;2;156;220;254merror[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                                          [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   24 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;212;212;212m);[39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                             [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   25 [39m[49m[48;2;43;43;43m[38;2;255;255;255m }                                                                                                                                [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   26 [39m[49m[48;2;43;43;43m[38;2;255;255;255m   [39m[49m[48;2;43;43;43m[38;2;212;212;212m   [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                            [39m[49m
"
`;

exports[`basic with ANSI color codes 1`] = `
"
[48;2;43;43;43m[38;2;0;206;147mcommit[39m[49m[48;2;43;43;43m[38;2;0;238;170m f735de7025c6d626c5ae1a291fe24f143dea0313                                                                                  [39m[49m[48;2;43;43;43m[38;2;204;204;204m       [39m[49m
[48;2;43;43;43m[38;2;0;147;206mAuthor:[39m[49m[48;2;43;43;43m[38;2;0;170;238m Shrey Banga <banga.shrey@gmail.com>                                                                                     [39m[49m[48;2;43;43;43m[38;2;204;204;204m        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mDate:[39m[49m[48;2;43;43;43m[38;2;204;204;204m   Sun Apr 11 15:25:34 2021 -0700                                                                                            [39m[49m[48;2;43;43;43m[38;2;204;204;204m      [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[48;2;43;43;43m[38;2;176;176;176mAdd[39m[49m[48;2;43;43;43m[38;2;204;204;204m theme support                                                                                                                       [39m[49m
[48;2;43;43;43m[38;2;204;204;204m                                                                                                                                        [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[48;2;43;43;43m[38;2;255;221;153m [39m[49m[48;2;50;41;41m[38;2;176;88;88m■[39m[49m[48;2;41;50;41m[38;2;88;176;88m■[39m[49m[48;2;43;43;43m[38;2;255;221;153m todo.md                                                                                                                             [39m[49m
[2m[48;2;43;43;43m[38;2;255;241;214m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[49m[22m
[2m[48;2;43;43;43m[38;2;255;255;255m@@ -7,6 +7,7 @@                                                                                                                         [39m[49m[22m
[48;2;50;41;41m[38;2;176;88;88m    7 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [39m[49m[48;2;58;48;48m[38;2;212;212;212m[[39m[49m[48;2;58;48;48m[38;2;206;145;120mx[39m[49m[48;2;58;48;48m[38;2;212;212;212m][39m[49m[48;2;58;48;48m[38;2;212;212;212m Handle file addition/deletion properly[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    8 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [39m[49m[48;2;58;48;48m[38;2;212;212;212m[[39m[49m[48;2;58;48;48m[38;2;206;145;120mx[39m[49m[48;2;58;48;48m[38;2;212;212;212m][39m[49m[48;2;58;48;48m[38;2;212;212;212m Fix incorrect line positions when a hunk has discontinuous inserts and/or deletes[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                       [39m[49m
[48;2;50;41;41m[38;2;176;88;88m    9 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [39m[49m[48;2;58;48;48m[38;2;212;212;212m[[39m[49m[48;2;58;48;48m[38;2;206;145;120mx[39m[49m[48;2;58;48;48m[38;2;212;212;212m][39m[49m[48;2;58;48;48m[38;2;212;212;212m Organize code[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                           [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   10 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [ ] Handle empty diffs[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                                      [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   11 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [ ] Handle moves and renames without diffs[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                  [39m[49m
[48;2;50;41;41m[38;2;176;88;88m   12 [39m[49m[48;2;58;48;48m[38;2;204;102;102m - [39m[49m[48;2;58;48;48m[38;2;212;212;212m   [ ] Highlight changes in lines[39m[49m[48;2;58;48;48m[38;2;204;102;102m                                                                                              [39m[49m
[48;2;41;50;41m[38;2;88;176;88m    7 [39m[49m[48;2;48;58;48m[38;2;102;204;102m + [39m[49m[48;2;48;58;48m[38;2;103;150;230m-[39m[49m[48;2;48;58;48m[38;2;212;212;212m   [39m[49m[48;2;48;58;48m[38;2;212;212;212m[[39m[49m[48;2;48;58;48m[38;2;206;145;120mx[39m[49m[48;2;48;58;48m[38;2;212;212;212m][39m[49m[48;2;48;58;48m[38;2;212;212;212m Move visual config to theme[39m[49m[48;2;48;58;48m[38;2;102;204;102m                                                                                            [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   13 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
[48;2;43;43;43m[38;2;102;102;102m   14 [39m[49m[48;2;43;43;43m[38;2;255;255;255m                                                                                                                                  [39m[49m
"
`;
